<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tutorial2</string>
    
    <!-- ログイン画面用 -->
    <string name="login_login">ログイン</string>
    <string name="login_email">E-mail</string>
    <string name="login_password">パスワード</string>
    <string name="login_loginbtn">ログイン</string>
    <string name="login_signupbtn">サインアップ</string>
    <string name="login_passwordresetbtn">パスワードリセット</string>
    
    <!-- メイン画面用 -->
    <string name="main_nodata">No data</string>
    
    <!-- サインアップ画面用 -->
    <string name="signup_signup">サインアップ</string>
    <string name="signup_email">E-mail</string>
    <string name="signup_password">パスワード</string>
    <string name="signup_passwordconfirm">パスワード(確認)</string>
    <string name="signup_signupbtn">サインアップ</string>
    <string name="signup_backbtn">戻る</string>
    
    <!-- パスワードリセット画面用 -->
    <string name="passwordreset_passwordreset">パスワードリセット</string>
    <string name="passwordreset_description">以下のフィールドに E-mail アドレスを入力してください。 
        パスワードリセット用のメールを送信します。</string>
    <string name="passwordreset_email">E-mail</string>
    <string name="passwordreset_passwordresetbtn">送信</string>
    <string name="passwordreset_backbtn">戻る</string>
    
    <!-- アクションバー用 -->
    <string name="action_add">Add</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_refresh">Refresh</string>
    
</resources>
