<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/textView_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_signup"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <Space android:layout_width="match_parent"
        android:layout_height="25dip"/>
    
    <TextView
        android:id="@+id/textView_emailinsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_email" />
    
    <EditText
        android:id="@+id/editText_emailinsignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>
    
    <TextView
        android:id="@+id/textView_passwordinsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_password" />

    <EditText
        android:id="@+id/editText_passwordinsignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textWebPassword" />
    
    <TextView
        android:id="@+id/textView_passwordconfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_passwordconfirm" />

    <EditText
        android:id="@+id/editText_passwordconfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textWebPassword" />
    
    <Button
        android:id="@+id/button_signupinsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_signupbtn" />
    
    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_backbtn" />
        
</LinearLayout>
