<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/textView_passwordreset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordreset_passwordreset"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <Space android:layout_width="match_parent"
        android:layout_height="25dip"/>
    
    <TextView
        android:id="@+id/textView_descriptioninpasswordreset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordreset_description" />
    
    <Space android:layout_width="match_parent"
        android:layout_height="25dip"/>
        
    <TextView
        android:id="@+id/textView_emailinpasswordreset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordreset_email" />
    
    <EditText
        android:id="@+id/editText_emailinpasswordreset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>
    
    <Button
        android:id="@+id/button_passwordreset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordreset_passwordresetbtn" />
        
    <Button
        android:id="@+id/button_backinpasswordreset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordreset_backbtn" />
        
</LinearLayout>
